k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsupportbackendapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsupportbackendapp
  template:
    metadata:
      labels:
        app: productsupportbackendapp
    spec:
      containers:
      - name: productsupportbackendapp
        image: myil/productsupportbackendapi:1.2
        ports:
        - containerPort: 80
