k8/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systemintelligencefrontendapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: systemintelligencefrontendapp
  template:
    metadata:
      labels:
        app: systemintelligencefrontendapp
    spec:
      containers:
      - name: systemintelligencefrontendapp
        image: issappacr.azurecr.io/si/system-intelligence-frontend:1.1.3
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "1Gi" 
            cpu: "500m"
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: systemintelligencefrontendapp
spec:
  type: ClusterIP
  ports:
  - port: 8501
  selector:
    app: systemintelligencefrontendapp
