k8/si-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: si-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /heartie-be(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: systemintelligencebackendapp
            port:
              number: 80
      - path: /heartie(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: systemintelligencefrontendapp
            port:
              number: 8501
